--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         };
         return (
           <div>
-            <div>
-              <label htmlFor="minutes">Minutes</label>
+            <div className="input-container">
+              <label htmlFor="minutes">Minute</label>
               <input 
                 value={inverted ? amount*60 : amount} 
                 id="minutes" 
@@ -35,10 +35,11 @@
                 type="number"
                 onChange={onChange}
                 disabled={inverted}
+                style={{ width: '150px' }} // 크기를 조절하려면 이 부분을 수정
               />
             </div>
-            <div>
-              <label htmlFor="hours">Hours</label>
+            <div className="input-container">
+              <label htmlFor="hours">Hour</label>
               <input 
                 value={inverted ? amount : (amount/60).toFixed(1)}
                 id="hours" 
@@ -46,6 +47,7 @@
                 type="number"
                 disabled={!inverted}
                 onChange={onChange}
+                style={{ width: '150px' }} // 크기를 조절하려면 이 부분을 수정
               />
             </div>
             <button onClick={reset}>Reset</button>
@@ -66,7 +68,7 @@
         };
         return (
           <div>
-            <div>
+            <div className="input-container">
               <label htmlFor="km">Km</label>
               <input 
                 value={inverted ? amount*1.60934 : amount} 
@@ -75,9 +77,10 @@
                 type="number"
                 onChange={onChange}
                 disabled={inverted}
+                style={{ width: '150px' }} // 크기를 조절하려면 이 부분을 수정
               />
             </div>
-            <div>
+            <div className="input-container">
               <label htmlFor="miles">Miles</label>
               <input 
                 value={inverted ? amount : amount/1.60934}
@@ -86,6 +89,7 @@
                 type="number"
                 disabled={!inverted}
                 onChange={onChange}
+                style={{ width: '150px' }} // 크기를 조절하려면 이 부분을 수정
               />
             </div>
             <button onClick={reset}>Reset</button>
@@ -101,12 +105,12 @@
         return(
           <div>
             <h1>Super Converter</h1>
-            <select value={index} onChange={onSelect}>
+            <select value={index} onChange={onSelect} className="select-box">
               <option value="xx">Select your units</option>
-              <option value="0">Minutes & Hours</option>
+              <option value="0">Minute & Hour</option>
               <option value="1">Km & Miles</option> 
             </select>
-            <hr />
+            <br />
             {index == "xx" ? "Please select your units" : null}
             {index == "0" ? <MinutesToHours /> : null}
             {index == "1" ? <KmToMiles /> : null}
